--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ button:hover{
     border-bottom-right-radius: 30px;
     position: fixed;
     width: 100%;
-    z-index: 9999;
+    z-index: 1;
 }
 
 main {
@@ -42,13 +42,18 @@ main {
     justify-content: center;
 }
 
+.modal-dialog{
+    z-index: 2;
+    margin-top: 120px;
+}
+
 .top{
     display: flex;
     width: 100%;
     justify-content: center;
     gap: 10px;
     flex-wrap: wrap;
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 .form {
@@ -64,7 +69,7 @@ main {
 .search{
     display: flex;
     width: 45%;
-    height: 373px;
+    height: 440px;
     top: 85px;
     position: relative;
 }
@@ -75,11 +80,6 @@ main {
     text-align: center;
     margin-top: 10px;
 }
-
-/* .search #searchBook label{
-    color: red;
-
-} */
 
 #searchSubmit{
     margin-top: 20px;
@@ -100,7 +100,7 @@ main {
 }
 
 .book{
-    margin-top: -15px;
+    margin-top: -25px;
     display: flex;
     justify-content: center;
     gap: 10px;
@@ -344,13 +344,14 @@ p {
         margin-top: 60px;
         position: relative;
         top: 30px;
-        width: 80%
+        width: 80%;
+        margin-top: 0;
     }
 
     #after{
         position: relative;
         top: 30px;
-        width: 80%
+        width: 80%;
     }
 
     .form{
@@ -365,7 +366,7 @@ p {
 
 @media screen and (max-width:414px) {
     #before {
-            margin-top: 15px;
+            margin-top: 10px;
             position: relative;
             top: 130px;
         }
@@ -374,6 +375,10 @@ p {
         position: relative;
         top: 130px;
         margin-bottom: 100px;
+    }
+
+    .foot h6{
+        font-size: small;
     }
 }
 
